--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1703,3 +1703,10 @@
   enTitle: Bank Koltso Urala
   url: http://www.kubank.ru
   color: '#02A25F'
+241:
+  name: 'forabank'
+  country: ru
+  title: Фора Банк
+  enTitle: Fora Bank
+  url: http://forabank.ru/
+  color: '#ffffff'
