--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1673,40 +1673,47 @@
   country: ru
   title: ВТБ
   enTitle: VTB
-  url: http://www.vtb.ru
+  url: https://www.vtb.ru
   color: '#00498f'
 237:
   name: 'nskbl'
   country: ru
   title: Банк Левобережный
   enTitle: Bank Levoberezhny
-  url: http://nskbl.ru
+  url: https://nskbl.ru
   color: '#00858A'
 238:
   name: 'abr'
   country: ru
   title: Банк Россия
   enTitle: Bank Rossiya
-  url: http://abr.ru
+  url: https://abr.ru
   color: '#294250'
 239:
   name: 'kubankredit'
   country: ru
   title: Банк Кубань Кредит
   enTitle: Bank Kuban Credit
-  url: http://kk.bank
+  url: https://kk.bank
   color: '#084E98'
 240:
   name: 'kubank'
   country: ru
   title: Банк Кольцо Урала
   enTitle: Bank Koltso Urala
-  url: http://www.kubank.ru
+  url: https://www.kubank.ru
   color: '#02A25F'
 241:
   name: 'forabank'
   country: ru
   title: Фора Банк
   enTitle: Fora Bank
-  url: http://forabank.ru/
+  url: https://forabank.ru/
   color: '#ffffff'
+242:
+  name: 'novikombank'
+  country: ru
+  title: 'Новикомбанк'
+  enTitle: 'Novikombank'
+  url: https://novikom.ru/
+  color: '#005191'
