feat: detect new MTS Bank bank for prefix (559784) feat: detect YooMoney bank for prefix (559900)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1738,3 +1738,10 @@
   enTitle: 'SMP Bank'
   url: https://smpbank.ru/
   color: '#597CA2'
+246:
+  name: 'mtsbank'
+  country: ru
+  title: 'МТС Банк'
+  enTitle: 'MTS Bank'
+  url: https://mtsbank.ru/
+  color: '#E30611'
