feat: rename Yandex Money to YooMoney feat: detect YooMoney bank for prefix (220412)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -987,9 +987,9 @@
 139:
   name: yandex
   country: ru
-  title: Яндекс.Деньги
-  enTitle: Yandex Money
-  url: https://money.yandex.ru/
+  title: ЮMoney
+  enTitle: YooMoney
+  url: https://yoomoney.ru/
   color: '#000000'
 140:
   name: siab
