--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1786,4 +1786,4 @@
   title: Россельхозбанк
   enTitle: Russian Agricultural Bank
   url: https://www.rshb.ru
-  color: '#E60012'
+  color: '#145021'
