feat: detect MTS Bank for prefix (220028)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1739,10 +1739,10 @@
   url: https://smpbank.ru/
   color: '#597CA2'
 246:
-  name: 'mtsbank'
+  name: mtsbank
   country: ru
-  title: 'МТС Банк'
-  enTitle: 'MTS Bank'
+  title: МТС Банк
+  enTitle: MTS Bank
   url: https://mtsbank.ru/
   color: '#E30611'
 247:
