feat: detect ru Post Bank for prefix (405991)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1718,10 +1718,10 @@
   url: https://novikom.ru/
   color: '#005191'
 243:
-  name: 'postbank'
+  name: postbank
   country: ru
-  title: 'Почта Банк'
-  enTitle: 'Post Bank'
+  title: Почта Банк
+  enTitle: Post Bank
   url: https://www.pochtabank.ru/
   color: '#001689'
 244:
