feat: detect Santander Bank (Brazil) for prefix (407303)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1844,3 +1844,10 @@
   enTitle: Credit Bank of Moscow
   url: https://mkb.ru/en/
   color: '#bb0032'
+264:
+  name: santander
+  country: br
+  title: Santander
+  enTitle: Santander
+  url: https://www.santander.com.br/
+  color: '#ff0000'
