feat: detect KEB Hana Bank for prefix (418236, 414015, 558822)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1858,3 +1858,10 @@
   enTitle: Ural Bank for Reconstruction and Development
   url: https://ubrr.ru/
   color: '#cc163f'
+266:
+  name: kebhana
+  country: kr
+  title: 주식회사 하나은행
+  enTitle: KEB Hana Bank
+  url: https://kebhana.com
+  color: '#009692'
