feat: detect Almazergienbank for prefix (356504, 220055)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1865,3 +1865,10 @@
   enTitle: KEB Hana Bank
   url: https://kebhana.com
   color: '#009692'
+267:
+  name: albank
+  country: ru
+  title: Алмазэргиэнбанк
+  enTitle: Almazergienbank
+  url: https://albank.ru
+  color: '#2f88f0'
