feat: detect Transkapitalbank for prefix (220059, 478474, 478475, 478476, 402877)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1893,3 +1893,10 @@
   enTitle: Forshtadt Bank
   url: https://forshtadt.ru
   color: '#920128'
+271:
+  name: transkapitalbank
+  country: ru
+  title: Транскапиталбанк
+  enTitle: Transkapitalbank
+  url: http://www.tkbbank.ru/
+  color: '#00abaa'
