feat: detect DongA Bank for prefix (419661, 419662)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1898,5 +1898,12 @@
   country: ru
   title: Транскапиталбанк
   enTitle: Transkapitalbank
-  url: http://www.tkbbank.ru/
+  url: https://www.tkbbank.ru/
   color: '#00abaa'
+272:
+  name: dongabank
+  country: vn
+  title: Đông Á Bank
+  enTitle: DongA Bank
+  url: https://dongabank.com.vn/
+  color: '#ff9900'
