feat: detect Fora Bank for prefix (425690)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1704,7 +1704,7 @@
   url: https://www.kubank.ru
   color: '#02A25F'
 241:
-  name: 'forabank'
+  name: forabank
   country: ru
   title: Фора Банк
   enTitle: Fora Bank
