feat: detect Jusan Bank for prefix (535650)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1935,3 +1935,10 @@
   enTitle: Severgazbank
   url: https://severgazbank.ru/
   color: '#1079bf'
+277:
+  name: jusan
+  country: kz
+  title: Jusan Bank
+  enTitle: Jusan Bank
+  url: https://jusan.kz/
+  color: '#f95200'
