feat: detect Kuznetskbusinessbank for prefix (220112)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1970,3 +1970,10 @@
   enTitle: Avtogradbank
   url: https://avtogradbank.ru/
   color: '#007842'
+282:
+  name: kbb
+  country: ru
+  title: Кузнецкбизнесбанк
+  enTitle: Kuznetskbusinessbank
+  url: https://kbb.ru/
+  color: '#5165ac'
