feat: detect Transcapitalbank for prefix (410319)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1897,7 +1897,7 @@
   name: transkapitalbank
   country: ru
   title: Транскапиталбанк
-  enTitle: Transkapitalbank
+  enTitle: Transcapitalbank
   url: https://www.tkbbank.ru/
   color: '#00abaa'
 272:
