feat: detect InBank for prefix (471465)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -1991,3 +1991,10 @@
   enTitle: Banca Intesa
   url: https://bancaintesa.ru
   color: '#004274'
+286:
+  name: inbank
+  country: ru
+  title: ИнБанк
+  enTitle: InBank
+  url: https://in-bank.ru
+  color: '#106e53'
