feat: detect Absolutbank (ru) for prefix (423569, 443307)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2040,3 +2040,10 @@
   enTitle: Russian Regional Development Bank
   url: https://www.vbrr.ru
   color: '#064287'
+293:
+  name: absolutbank
+  country: ru
+  title: Абсолютбанк
+  enTitle: Absolutbank
+  url: http://www.absolutbank.ru
+  color: '#b72930'
