feat: detect Unistream Bank for prefix (411727)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2054,3 +2054,10 @@
   enTitle: Halyk Bank
   url: https://halykbank.kz
   color: '#006D58'
+295:
+  name: unistream
+  country: ru
+  title: Юнистрим
+  enTitle: Unistream
+  url: https://unistream.ru
+  color: '#104076'
