feat: detect 121 Financial Credit Union for prefix (438583)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2061,3 +2061,10 @@
   enTitle: Unistream
   url: https://unistream.ru
   color: '#104076'
+296:
+  name: 121financialcu
+  country: ru
+  title: 121 Financial Credit Union
+  enTitle: 121 Financial Credit Union
+  url: https://121fcu.org/
+  color: '#FF6D6A'
