feat: detect Kaspi Bank for prefix (440043)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2068,3 +2068,10 @@
   enTitle: 121 Financial Credit Union
   url: https://121fcu.org/
   color: '#FF6D6A'
+297:
+  name: kaspi
+  country: kz
+  title: Kaspi Bank
+  enTitle: Kaspi Bank
+  url: https://kaspi.kz/
+  color: '#EF4836'
