feat: detect Eniseisk United Bank for prefix (220078)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2117,3 +2117,10 @@
   enTitle: Ekaterinburg Bank
   url: https://emb.ru/
   color: '#0E923C'
+304:
+  name: unitedru
+  country: ru
+  title: Енисейский объединенный банк
+  enTitle: Eniseisk United Bank
+  url: https://www.united.ru/
+  color: '#FCB205'
