feat: added exclude-from-classmap to composer config for psr4 section

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "kak\\BankInfo\\": "src/"
+            "kak\\BankInfo\\": "src/",
+            "exclude-from-classmap": ["tests/"]
         }
     },
     "authors": [
