feat: detect OTP Bank for prefix (516009,220196,559542,552140,526839,522470,521330)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2173,3 +2173,10 @@
   enTitle: RNKB Bank
   url: https://www.rncb.ru/
   color: '#00AEC7'
+312:
+    name: otpbank
+    country: ru
+    title: OTP Bank
+    enTitle: OTP Bank
+    url: https://otpbank.ru/
+    color: '#6EC72D'
