feat: detect MOSOBLBANK for prefix (220047)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2201,3 +2201,10 @@
     enTitle: Bank Avers
     url: https://aversbank.ru/
     color: '#216B36'
+316:
+    name: mosoblbank
+    country: ru
+    title: MOSOBLBANK
+    enTitle: МОСОБЛБАНК
+    url: https://mosoblbank.ru/
+    color: '#D10E14'
