feat: detect RNKO for prefix (525477, 467034, 437466, 548777, 518916) feat: detect Rogers Bank for prefix (557962)

--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2222,3 +2222,10 @@
     enTitle: RNKO
     url: https://rnko.ru/
     color: '#545857'
+319:
+    name: rogers
+    country: ca
+    title: Rogers Bank
+    enTitle: Rogers Bank
+    url: https://www.rogersbank.com/
+    color: '#DA291C'
