--- a/src/database/banks.yml
+++ b/src/database/banks.yml
@@ -2236,3 +2236,10 @@
     enTitle: Bank of Kazan
     url: https://bankofkazan.ru/
     color: '#8CC63F'
+321:
+    name: primbank
+    country: ru
+    title: Банк Приморье
+    enTitle: Primorye Bank
+    url: https://primbank.ru/
+    color: '#058B8C'
